tests/compile/non_biject_not_surjective.stderr
error[E0004]: non-exhaustive patterns: `LargeEnum::Z` not covered
  --> tests/compile/non_biject_not_surjective.rs:15:1
   |
15 | #[bijective]
   | ^^^^^^^^^^^^ pattern `LargeEnum::Z` not covered
   |
note: `LargeEnum` defined here
  --> tests/compile/non_biject_not_surjective.rs:9:6
   |
 9 | enum LargeEnum {
   |      ^^^^^^^^^
...
12 |     Z,
   |     - not covered
   = note: the matched value is of type `LargeEnum`
   = note: this error originates in the attribute macro `bijective` (in Nightly builds, run with -Z macro-backtrace for more info)
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
15 | #[bijective], LargeEnum::Z => todo!()
   |             +++++++++++++++++++++++++
